# beat-dodge

./: .gitignore  README.md  run-living-room-demo.sh
.github/workflows/: ci.yml
docs/: README.md  implementation_status_report_2026-05-11.md  living_room_demo_runbook.md  living_room_playability_gap_plan_2026-05-11.md  multiplayer_camera_music_game_project_plan.md
docs/schemas/: camera-action.schema.json  camera-frame.schema.json  course.schema.json
game/godot-project/: README.md  project.godot
game/godot-project/data/: 03_the_fixer_course.json  sample_course.json
game/godot-project/scenes/: main.tscn
game/godot-project/scripts/: course_runtime.gd  course_runtime.gd.uid
game/godot-project/shaders/: forest_floor.gdshader  forest_floor.gdshader.uid
services/camera-input/: README.md  pyproject.toml  requirements.txt
services/camera-input/camera_input/: __init__.py  capture.py  cli.py  detector.py  movement.py  overlay.py  players.py  server.py
services/camera-input/tests/: test_capture.py  test_detector.py  test_movement.py  test_overlay.py  test_players.py  test_server.py
services/song-analyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
services/song-analyzer/song_analyzer/: __init__.py  analyzer.py  cli.py  course_cli.py  course_generator.py
services/song-analyzer/song_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/song-analyzer/tests/: test_analyzer.py  test_course_generator.py
tools/: generate-course.sh  run-camera-service.sh  run-living-room-demo.sh  setup-python-services.sh
